portfolio-saintsfilms-tsx/src/assets/caseslist.css
.div-case-card-list {
  width: clamp(18rem, 90vw, 35rem);
  margin-bottom: 20px;
  border-radius: 5px;
  box-shadow: 5px 5px 18px -3px rgba(0, 0, 0, 0.56);

  position: relative;

  aspect-ratio: 1 / 1;
  cursor: pointer;
}
/* overlay branco */
.div-case-card-list::after {
  content: "";
  position: absolute;
  inset: 0;
  background: white;
  opacity: 0;
  transition: opacity 0.4s ease;
  z-index: 1;
}

/* hover */
.div-case-card-list:hover::after {
  opacity: 0.4; /* controla o “esbranquiçado” */
}
.image-case-list {
  width: 100%;
  height: 100%;
  object-fit: cover;
  transition: transform 0.8s ease;
}
.image-case-list::after {
  content: "";
  position: absolute;
  inset: 0;
  z-index: 1;
}

.container-list-cards {
  padding: 50px;
  display: grid;
  grid-template-columns: 1fr;
  justify-content: center;
  align-content: center;
  gap: clamp(40px, 2vw, 70px);
  max-width: 1500px;
  margin: 0 auto;
}
@media (min-width: 1100px) {
  .container-list-cards {
    grid-template-columns: repeat(2, 1fr);
  }
}
@media (min-width: 1650px) {
  .container-list-cards {
    grid-template-columns: repeat(3, 1fr);
  }
}
.content-case-list {
  padding: 12px;
  font-family: var(--font-libre-rich);
  font-size: 1rem;
  font-weight: 500;
  color: #222;
}
.title-project {
  font-family: var(--font-libre-rich);
  font-weight: 400;
  font-size: clamp(70px, 8vw, 120px);
  line-height: 1.1;
  margin: 20px 20px 30px 0px;
  text-align: left;
  transition: 1s;
}
.container-project {
  height: max-content;
  padding: 20px 20px 40px;
  background: linear-gradient(to right, #e8e8e8 0%, #e8e8e8 45%, #f5f5f7 100%);
}

